--- a/app/src/main/res/layout/dia_layout.xml
+++ b/app/src/main/res/layout/dia_layout.xml
@@ -2,70 +2,188 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:paddingTop="@dimen/margem_superior"
+    android:paddingBottom="@dimen/margem_inferior"
     android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
+
         <TextView
             android:id="@+id/txtNumero"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:textSize="@dimen/fonte_item_dia" />
 
         <TextView
             android:id="@+id/txtNome"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:textSize="@dimen/fonte_item_dia"
+            android:layout_marginLeft="@dimen/esp_esquerdo"
+            android:layout_marginRight="@dimen/esp_direito" />
+
+
+
+
 
         <TextView
             android:id="@+id/txtManhaIni"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:textSize="@dimen/fonte_item_dia" />
+
+        <TextView
+            android:text="@string/label_barra"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="@dimen/fonte_item_dia" />
 
         <TextView
             android:id="@+id/txtManhaFim"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:textSize="@dimen/fonte_item_dia" />
+
+        <TextView
+            android:text="@string/label_igual"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="@dimen/fonte_item_dia" />
 
         <TextView
             android:id="@+id/txtManhaCal"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:textSize="@dimen/fonte_item_dia"
+            android:layout_marginRight="@dimen/esp_direito" />
+
+
+
+
 
         <TextView
             android:id="@+id/txtTardeIni"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:textSize="@dimen/fonte_item_dia" />
+
+        <TextView
+            android:text="@string/label_barra"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="@dimen/fonte_item_dia" />
 
         <TextView
             android:id="@+id/txtTardeFim"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:textSize="@dimen/fonte_item_dia" />
+
+        <TextView
+            android:text="@string/label_igual"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="@dimen/fonte_item_dia" />
 
         <TextView
             android:id="@+id/txtTardeCal"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:textSize="@dimen/fonte_item_dia"
+            android:layout_marginRight="@dimen/esp_direito" />
+
+
+
+
 
         <TextView
             android:id="@+id/txtNoiteIni"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:textSize="@dimen/fonte_item_dia" />
+
+        <TextView
+            android:text="@string/label_barra"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="@dimen/fonte_item_dia" />
 
         <TextView
             android:id="@+id/txtNoiteFim"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:textSize="@dimen/fonte_item_dia" />
+
+        <TextView
+            android:text="@string/label_igual"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="@dimen/fonte_item_dia" />
 
         <TextView
             android:id="@+id/txtNoiteCal"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:textSize="@dimen/fonte_item_dia" />
     </LinearLayout>
 
-    <TextView
-        android:id="@+id/txtObs"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <TextView
+            android:text="@string/label_debito"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="@dimen/fonte_item_dia" />
+
+        <TextView
+            android:id="@+id/txtDebito"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="@dimen/fonte_item_dia"
+            android:layout_marginLeft="@dimen/esp_esquerdo"
+            android:layout_marginRight="@dimen/esp_direito"
+            />
+
+
+
+
+
+        <TextView
+            android:text="@string/label_credito"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="@dimen/fonte_item_dia" />
+
+        <TextView
+            android:id="@+id/txtCredito"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="@dimen/fonte_item_dia"
+            android:layout_marginLeft="@dimen/esp_esquerdo"
+            android:layout_marginRight="@dimen/esp_direito"
+            />
+
+
+
+
+
+        <TextView
+            android:text="@string/label_obs"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="@dimen/fonte_item_dia" />
+
+        <TextView
+            android:id="@+id/txtObs"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="@dimen/fonte_item_dia" />
+    </LinearLayout>
+
 </LinearLayout>
