--- a/app/src/main/res/layout/mes_layout.xml
+++ b/app/src/main/res/layout/mes_layout.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
+    android:padding="@dimen/padding_mes"
     android:layout_height="match_parent">
 
     <TextView
-        android:textAppearance="?android:textAppearanceLarge"
+        android:textAppearance="?android:textAppearanceMedium"
         android:gravity="center_horizontal"
         android:id="@+id/txtNome"
         android:layout_width="match_parent"
