--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,10 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="esp_esquerdo">10dp</dimen>
+    <dimen name="esp_esquerdo_2">7dp</dimen>
+    <dimen name="esp_esquerdo_3">3dp</dimen>
     <dimen name="esp_direito">10dp</dimen>
+    <dimen name="esp_direito_2">7dp</dimen>
     <dimen name="fonte_item_dia">11sp</dimen>
-    <dimen name="margem_superior">12dp</dimen>
-    <dimen name="margem_inferior">12dp</dimen>
+    <dimen name="margem_superior">10dp</dimen>
+    <dimen name="margem_inferior">10dp</dimen>
     <dimen name="padding_ano">16dp</dimen>
     <dimen name="padding_mes">10dp</dimen>
 </resources>
