--- a/app/src/main/res/layout/dia_item_detalhe_layout.xml
+++ b/app/src/main/res/layout/dia_item_detalhe_layout.xml
@@ -2,7 +2,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:background="@color/branco"
+    android:orientation="vertical"
+    android:paddingLeft="@dimen/vinte_dp">
 
     <LinearLayout
         android:id="@+id/lltManha"
@@ -129,8 +131,7 @@
         <TextView
             android:id="@+id/txtTotal"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:elevation="@dimen/vinte_dp" />
+            android:layout_height="wrap_content" />
     </LinearLayout>
 
     <LinearLayout
@@ -150,8 +151,7 @@
         <TextView
             android:id="@+id/txtDebito"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:elevation="@dimen/vinte_dp" />
+            android:layout_height="wrap_content" />
     </LinearLayout>
 
     <LinearLayout
@@ -171,8 +171,7 @@
         <TextView
             android:id="@+id/txtCredito"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:elevation="@dimen/vinte_dp" />
+            android:layout_height="wrap_content" />
     </LinearLayout>
 
     <LinearLayout
@@ -192,8 +191,22 @@
         <TextView
             android:id="@+id/txtObs"
             android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/lltClick"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:paddingBottom="@dimen/dez_dp"
+        android:paddingTop="@dimen/dez_dp">
+
+        <TextView
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:elevation="@dimen/vinte_dp" />
+            android:text="@string/label_click_para_atualizar" />
+
     </LinearLayout>
 
 </LinearLayout>
