--- a/app/src/main/res/layout/main_layout.xml
+++ b/app/src/main/res/layout/main_layout.xml
@@ -2,38 +2,35 @@
 <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/drawerLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:id="@+id/drawerLayout"
     tools:context="florencio.com.br.appperiodo.MainActivity">
 
-   <LinearLayout
-       android:orientation="vertical"
-       android:layout_width="match_parent"
-       android:layout_height="match_parent">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-       <android.support.v7.widget.Toolbar
-           android:background="@color/colorPrimary"
-           android:id="@+id/toolbar"
-           android:layout_width="match_parent"
-           android:layout_height="wrap_content">
-       </android.support.v7.widget.Toolbar>
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/colorPrimary"></android.support.v7.widget.Toolbar>
 
-       <FrameLayout
-           android:id="@+id/container"
-           android:layout_width="match_parent"
-           android:layout_weight="3"
-           android:layout_height="0dp">
-       </FrameLayout>
-   </LinearLayout>
+        <FrameLayout
+            android:id="@+id/container"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="3"></FrameLayout>
+    </LinearLayout>
 
-   <android.support.design.widget.NavigationView
-       android:id="@+id/navigationView"
-       android:layout_width="wrap_content"
-       android:layout_height="match_parent"
-       app:menu="@menu/menu_lateral"
-       android:layout_gravity="start">
-   </android.support.design.widget.NavigationView>
+    <android.support.design.widget.NavigationView
+        android:id="@+id/navigationView"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        app:menu="@menu/menu_lateral"></android.support.design.widget.NavigationView>
 
 </android.support.v4.widget.DrawerLayout>
