--- a/app/src/main/res/layout/mes_item_layout.xml
+++ b/app/src/main/res/layout/mes_item_layout.xml
@@ -1,14 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:padding="@dimen/dez_dp"
-    android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:elevation="@dimen/cinco_dp"
+    android:orientation="vertical"
+    android:padding="@dimen/dez_dp">
 
     <TextView
-        android:textAppearance="?android:textAppearanceMedium"
-        android:gravity="center_horizontal"
         android:id="@+id/txtNome"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:gravity="center_horizontal"
+        android:textAppearance="?android:textAppearanceMedium" />
 
 </LinearLayout>
