--- a/app/src/main/res/menu/menu_contexto_dia.xml
+++ b/app/src/main/res/menu/menu_contexto_dia.xml
@@ -2,8 +2,13 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/itemEmail"
+        android:id="@+id/itemExportar"
         android:icon="@android:drawable/ic_menu_share"
-        android:title="@string/label_email" />
+        android:title="@string/label_exportar_email" />
+
+    <item
+        android:id="@+id/itemImportar"
+        android:icon="@android:drawable/ic_menu_share"
+        android:title="@string/label_importar" />
 
 </menu>
