--- a/app/src/main/res/menu/menu_contexto_dia.xml
+++ b/app/src/main/res/menu/menu_contexto_dia.xml
@@ -4,7 +4,12 @@
     <item
         android:id="@+id/itemExportar"
         android:icon="@android:drawable/ic_menu_share"
-        android:title="@string/label_exportar_email" />
+        android:title="@string/label_exportar" />
+
+    <item
+        android:id="@+id/itemExportarDados"
+        android:icon="@android:drawable/ic_menu_share"
+        android:title="@string/label_exportar_dados" />
 
     <item
         android:id="@+id/itemImportar"
