--- a/app/src/main/res/layout/dia_atual_layout.xml
+++ b/app/src/main/res/layout/dia_atual_layout.xml
@@ -254,6 +254,22 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:text="@string/label_total_lei" />
+
+                <TextView
+                    android:id="@+id/txtTotalLei"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="@dimen/tres_dp" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:text="@string/label_debito" />
 
                 <TextView
