--- a/app/src/main/res/layout/dia_item_detalhe_layout.xml
+++ b/app/src/main/res/layout/dia_item_detalhe_layout.xml
@@ -135,6 +135,26 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/lltTotalLei"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:paddingBottom="@dimen/cinco_dp"
+        android:paddingTop="@dimen/cinco_dp">
+
+        <TextView
+            android:id="@+id/lblTotalLei"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/label_total_lei" />
+
+        <TextView
+            android:id="@+id/txtTotalLei"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+    </LinearLayout>
+
+    <LinearLayout
         android:id="@+id/lltDebito"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
