--- a/app/src/main/res/layout/main_layout.xml
+++ b/app/src/main/res/layout/main_layout.xml
@@ -17,13 +17,13 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/colorPrimary"></android.support.v7.widget.Toolbar>
+            android:background="@color/colorPrimary" />
 
         <FrameLayout
             android:id="@+id/container"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="3"></FrameLayout>
+            android:layout_weight="3" />
     </LinearLayout>
 
     <android.support.design.widget.NavigationView
@@ -31,6 +31,6 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
-        app:menu="@menu/menu_lateral"></android.support.design.widget.NavigationView>
+        app:menu="@menu/menu_lateral" />
 
 </android.support.v4.widget.DrawerLayout>
