--- a/app/src/main/res/layout/preferencia_layout.xml
+++ b/app/src/main/res/layout/preferencia_layout.xml
@@ -8,7 +8,7 @@
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/colorPrimary"></android.support.v7.widget.Toolbar>
+        android:background="@color/colorPrimary" />
 
     <fragment
         android:id="@+id/preferencia"
