--- a/app/src/main/res/layout/dia_dialog_layout.xml
+++ b/app/src/main/res/layout/dia_dialog_layout.xml
@@ -44,6 +44,12 @@
                 android:layout_height="wrap_content"
                 android:text="@string/label_especial" />
 
+            <CheckBox
+                android:id="@+id/chkSincronizado"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/label_sincronizado" />
+
         </LinearLayout>
 
         <LinearLayout
