--- a/app/src/main/res/layout/dia_item_grupo_layout.xml
+++ b/app/src/main/res/layout/dia_item_grupo_layout.xml
@@ -23,6 +23,15 @@
         android:minWidth="@dimen/quarenta_dp" />
 
     <TextView
+        android:id="@+id/txtSinc"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginRight="@dimen/sete_dp"
+        android:gravity="center"
+        android:maxWidth="@dimen/sete_dp"
+        android:minWidth="@dimen/sete_dp" />
+
+    <TextView
         android:id="@+id/txtManhaIni"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
